--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "sannehoogmans/lessconfigdump",
   "description": "Config Dump For Deployment",
   "type": "magento2-module",
+  "version": "1.0.1",
   "license": "MIT",
   "authors": [
     {
